@@ -1,12 +1,11 @@
 package com.javawebtutor;
 
 import java.security.Key;
+import java.util.Base64;
 
 import javax.crypto.Cipher;
 import javax.crypto.spec.SecretKeySpec;
 
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
 
 public class AESEncryptionDecryptionTest {
 
@@ -19,7 +18,7 @@ public class AESEncryptionDecryptionTest {
      Cipher c = Cipher.getInstance(ALGORITHM);
      c.init(Cipher.ENCRYPT_MODE, key);  
      byte[] encValue = c.doFinal(valueToEnc.getBytes(UNICODE_FORMAT));
-     String encryptedValue = new BASE64Encoder().encode(encValue);
+     String encryptedValue = Base64.getEncoder().encodeToString(encValue);
      return encryptedValue;
   }
 
@@ -27,7 +26,8 @@ public static String decrypt(String encryptedValue) throws Exception {
     Key key = generateKey();
     Cipher c = Cipher.getInstance(ALGORITHM);
     c.init(Cipher.DECRYPT_MODE, key);
-    byte[] decordedValue = new BASE64Decoder().decodeBuffer(encryptedValue);
+//    byte[] decordedValue = new BASE64Decoder().decodeBuffer(encryptedValue);
+    byte[] decordedValue = Base64.getDecoder().decode(encryptedValue);
     byte[] decValue = c.doFinal(decordedValue);//////////LINE 50
     String decryptedValue = new String(decValue);
     return decryptedValue;
